--- a/theano-01.ipynb
+++ b/theano-01.ipynb
@@ -241,10 +241,12 @@
     "\\end{align}\n",
     "\n",
     "これは単純に正解クラスの対数尤度が全体的に高くなると嬉しいので採用されている(ややこしいが、損失としてはその負の値をとるので低いほど嬉しい)。今回は**手書き**の損失関数の各パラメタに対する偏微分を使って`theano.function`のupdatesを書いて確率的勾配法(SGD)でパラメータの更新をしてみる (微分はPRMLに載ってる)\n",
+    "\n",
     "\\begin{align}\n",
     "  \\mathbf{w}_{new} &= \\mathbf{w} - \\mu \\frac{\\partial L}{\\partial \\mathbf{w}} \\\\\n",
-    "  b_{new} &= \\mathbf{w} - \\mu \\frac{\\partial L}{\\partial b} \\\\\n",
+    "  b_{new} &= \\mathbf{w} - \\mu \\frac{\\partial L}{\\partial b}\n",
     "\\end{align}\n",
+    "\n",
     "ここで $\\mu$ は学習率(0.01など)"
    ]
   },
